--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,3 +20,20 @@ jobs:
       - name: test
         run: |
           make test
+
+  sample:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ^1.20
+      - uses: actions/cache@main
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: test
+        run: |
+          go build ./_example/main.go
